--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://huertohogarbackend-4dsf36psj-jeans-projects-56426119.vercel.app/api
+# REACT_APP_API_URL=https://huertohogarbackend-4dsf36psj-jeans-projects-56426119.vercel.app/api
